@@ -2,7 +2,7 @@ LIB=txjsonrpc
 NAME=txJSON-RPC
 EGG_NAME=txJSON_RPC
 #BZR=lp:txjsonrpc
-BZR='lp:~oubiwann/txjsonrpc/main'
+BZR='lp:~oubiwann/txjsonrpc/476650-cred-auth'
 SVN=svn+https://twisted-jsonrpc.googlecode.com/svn/trunk
 FLAG='skip_tests'
 MSG=commit-msg
